webapp: fix a bug where sync-audio button would tooltip while invisible.

--- a/webapp/src/styles.sass
+++ b/webapp/src/styles.sass
@@ -363,6 +363,7 @@ a
     margin-top: -0.2em
     opacity: 0
     padding-right: 0.4em
+    pointer-events: none
     position: absolute
     right: 0.8em
     text-decoration: none
@@ -371,6 +372,7 @@ a
 
     &.active
       opacity: 1
+      pointer-events: auto
 
     &:before
       @include reify
